--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Akshay-pwho/cinephilexo'"
               >
                 Github
               </button>
@@ -336,7 +336,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Akshay-pwho/retrofresh-discussion-form-/'"
+                onclick="location.href='https://github.com/Akshay-pwho/retr0/'"
               >
                 Github
               </button>
